@@ -135,28 +135,32 @@ FreeBSD</a>
 OpenBSD</a>
 <li><a href="http://pkgsrc.se/wip/runit/">
 NetBSD</a>
-<li><a href="http://annvix.org/">
-Annvix</a> (as default init scheme)
 <li><a href="http://packages.ubuntu.com/runit">
 Ubuntu</a> (as alternative init scheme)
-<li><a href="http://packages.gentoo.org/search/?sstring=runit">
+<li><a href="http://packages.gentoo.org/package/sys-process/runit">
 Gentoo</a>
+<li><a href="https://code.google.com/p/runit-for-lfs/">
+Linux from Scratch</a>
+<li><a href="http://www.finnix.org/">
+Finnix</a>
 <li><a href="http://www.smeserver.org/">
 SME server</a>
-<li><a href="http://www.opensde.org/">
-OpenSDE</a>
+<li><a href="http://linux-vserver.org/Running_runit-supervised_services_inside_a_vserver">
+Linux-VServer</a>
 <li><a href="http://www.t2-project.org/">
 T2</a>
-<li><a href="http://zinux.cynicbytrade.com/">
-Zinux Linux</a> (as default init scheme)
 <li><a href="http://www.gobolinux.org/">
 GoboLinux</a>
-<li><a href="http://deepofix.org/">
-deepOfix Mail Server</a> (as default init scheme)
 <li><a href="http://www.dragora.org/">
 Dragora GNU/Linux</a> (as default init scheme)
 <li><a href="https://wiki.archlinux.org/index.php/Runit">
 ArchLinux</a>
+<li><a href="http://www.opensde.org/">
+OpenSDE</a>
+<li><a href="http://zinux.cynicbytrade.com/">
+Zinux Linux</a> (as default init scheme)
+<li><a href="http://deepofix.org/">
+deepOfix Mail Server</a> (as default init scheme)
 </ul>
 If you know of more distributions, please
 <a href="mailto:supervision@list.skarnet.org">let me know</a>.
